GNOME Bugzilla – Bug 774915
[Wayland]: Destroying the parent of a subsurface causes _gdk_window_destroy_hierarchy: assertion failed
Last modified: 2016-12-05 10:09:42 UTC
Description: Following bug 774475 when one creates a subsurface as a child of a native window, destroying the parent window will cause an assertion failure: Gdk:ERROR:/home/ofourdan/src/gnome/gtk+/gdk/gdkwindow.c:2116:_gdk_window_destroy_hierarchy: assertion failed: (window->native_children == NULL) Aborted (core dumped) Additional data: Trivial patch to follow.
Created attachment 340597 [details] [review] [PATCH master] wayland: destroy subsurfaces along with parents Wayland subsurfaces can have other native window parents, but those need to be destroyed along with the rest of the window hierarchy otherwise an assert() is reached.
Created attachment 340598 [details] [review] [PATCH gtk-3-22] wayland: destroy subsurfaces along with parents Same for branch gtk-3-22
*** Bug 775470 has been marked as a duplicate of this bug. ***
Review of attachment 340598 [details] [review]: Makes sense to me.
Review of attachment 340597 [details] [review]: Makes sense to me.
Comment on attachment 340597 [details] [review] [PATCH master] wayland: destroy subsurfaces along with parents attachment 340597 [details] [review] has been pushed to git master as commit f6b4477 - wayland: destroy subsurfaces along with parents
Comment on attachment 340598 [details] [review] [PATCH gtk-3-22] wayland: destroy subsurfaces along with parents attachment 340598 [details] [review] has been pushed to branch gtk-3-22 as commit 7f39c7c - wayland: destroy subsurfaces along with parents
Comment on attachment 340598 [details] [review] [PATCH gtk-3-22] wayland: destroy subsurfaces along with parents attachment 340598 [details] [review] [review] has been pushed to branch gtk-3-22 as commit 7f39c7c - wayland: destroy subsurfaces along with parents